# emlearn-motion

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: CONTRIBUTING.md  conf.py  developing.md  getting_started.md  index.rst  notes.md  user_guide.rst
emlearn_motion/datasets/: download.py  pamap2.py  uci_har.py
emlearn_motion/datasets/configurations/: jonnor-brushing-1-timebased.yaml  pamap2.yaml  toothbrushing_jonnor_1.yaml
emlearn_motion/pipeline/: config.py  train.py
emlearn_motion/utils/: download.py
tests/: test_pipeline.py
