[project]
name = "emlearn-motion"
version = "0.0.1"
dependencies = [
    "pandas",
    "pyarrow",
    "emlearn>=0.22.0",
    "scikit-learn",
    "matplotlib",
    "setuptools",
    "structlog",
    "pyyaml",
]

[tool.setuptools.package-data]
emlearn_motion = [
    "**/*.txt",
    "**/*.json",
    "**/*.yaml",
]

[tool.setuptools]
include-package-data = true
packages = [
    "emlearn_motion.datasets",
    "emlearn_motion.plot",
    "emlearn_motion.pipeline",
    "emlearn_motion.features",
    "emlearn_motion.labeling",
    "emlearn_motion.utils",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx>=4.0.0",
    "recommonmark>=0.6.0",
    "sphinx_rtd_theme>=0.5.2",
    "sphinx-gallery>=0.10.1",
    "myst_parser>=4.0.0",
]
